<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tarefa"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inicio"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/dataInicio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:layout_weight="2"/>
        <EditText
            android:id="@+id/horaInicio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fim"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/dataFim"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:layout_weight="2"/>
        <EditText
            android:id="@+id/horaFim"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categoria"
        android:textSize="25sp"/>

    <Spinner
        android:id="@+id/categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/categorias">
    </Spinner>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:textSize="25sp"
        android:onClick="salvar"/>
</LinearLayout>